--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                             </form>
                             <button class="basket-btn nav-btn">Пусто</button>
                         </div>
+                    </nav>
                 </div>
-                </nav>
                 <div class="header-phone" aria-label="Время работы и телефон">
                     <p class="work-hour">С 10 до 20, ежедневно</p>
                     <p class="header-phone-number"><a href="tel:88124502525">8 812 450-25-25</a></p>
@@ -99,6 +99,7 @@
                                     <a class="btn btn-slider" href="#">Давайте оба!</a>
                                 </li>
                             </ul>
+                        </div>
                     </section>
                     <section class="promo">
                         <h2 class="visually-hidden">Акции</h2>
@@ -179,36 +180,43 @@
                         <b>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного
                             производства на развес</b>
                         <ul class="features-list">
-                            <li class="feature-item-make">Все наше мороженое изготавливается на собственном производстве,
-                                    с использованием современного оборудования и проверенных временем технологий.
+                            <li class="feature-item-make">Все наше мороженое изготавливается на собственном
+                                производстве, с использованием современного оборудования и проверенных временем технологий.
+
                             </li>
-                            <li class="feature-item-consist"> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества.
-                                     Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.
+                            <li class="feature-item-consist"> Для приготовления мороженого используются настоящие
+                                сливки и молоко высочайшего качества.
+                                Все дополнительные ингредиенты и добавки произведены из натурального, экологически
+                                чистого сырья.
+
                             </li>
-                            <li class="feature-item-suppliers">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний,
-                                                                с которыми нас связывает долговременное сотрудничество.
+                            <li class="feature-item-suppliers">Закупка ингредиентов производится только у проверенных
+                                фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.
+
                             </li>
-                            <li class="feature-item-delivery">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
-                                                            который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+                            <li class="feature-item-delivery">Доставка нашего мороженого до заказчиков осуществляется в
+                                специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.
+
                             </li>
                         </ul>
                     </section>
                     <div class=fellowship>
-                    <article class="news-blog">
-                        <h2>Новое в нашем блоге</h2>
-                        <a href="#" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
-                    </article>
-                    <section class="subscribe">
-                        <h2 class="visually-hidden">Подписка</h2>
-                        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
-                            что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
-                        </p>
-                        <label for="sub-email" class="visually-hidden">Электронная почта</label>
-                        <input type="email" name="sub-email" id="sub-email" placeholder="Электронная почта">
-                        <button class="btn btn-subscribe" type="submit">Отправить</button>
-                    </section>
-                </div>
+                        <article class="news-blog">
+                            <h2>Новое в нашем блоге</h2>
+                            <a href="#" class="artirle-title">10 способов сервировки фруктовых щербетов к столу</a>
+                        </article>
+                        <section class="subscribe">
+                            <h2 class="visually-hidden">Подписка</h2>
+                            <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
+                                что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)
+                            </p>
+                            <label for="sub-email" class="visually-hidden">Электронная почта</label>
+                            <input type="email" name="sub-email" id="sub-email" placeholder="Электронная почта">
+                            <button class="btn btn-subscribe" type="submit">Отправить</button>
+                        </section>
+                    </div>
                     <section class="contacts">
+                            <h2 class="visually-hidden">Как нас найти?</h2>
                         <p class="map"><img src="img/map(temp).jpg" alt="ул. Большая Конюшенная 19/8, Санкт-Петербург"
                                 width="1200" height="430"></p>
                         <div class="contacts-info">
