--- a/catalog.html
+++ b/catalog.html
@@ -151,7 +151,7 @@
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-2.jpg" width="267" height="267" alt="Мороженое сливочно-кофейное с кусочками шоколада фото">
                             <p class="catalog-item-price">380₽<span class="weight">/кг</span></p>
-                            <h3 class="catalog-item-title>">Сливочно-кофейное с кусочками шоколада</h3>
+                            <h3 class="catalog-item-title">Сливочно-кофейное с кусочками шоколада</h3>
                             <a href="#" class="btn">Купить</a>
                         </li>
                         <li class="catalog-item">
@@ -182,6 +182,8 @@
                             <img src="img/goods/ice-cream-7.jpg" width="267" height="267" alt="Мороженое сливочно-лимонное с карамельной присыпкой фото">
                             <p class="catalog-item-price">375₽<span class="weight">/кг</span></p>
                             <h3 class="catalog-item-title">Сливочно-лимонное с карамельной присыпкой</h3>
+                            <a href="#" class="btn">Купить</a>
+                        </li>
                         <li class="catalog-item">
                             <img src="img/goods/ice-cream-8.jpg" width="267" height="267" alt="Мороженое сливочное с шоколадной стружкой фото">
                             <p class="catalog-item-price">320₽<span class="weight">/кг</span></p>
